# kyouth-data-ai

./: README.md
week_1/: README.md  main.py  pyproject.toml
week_1/queries/: create_jobs_quarantine_tbl.sql  create_jobs_tbl.sql  get_avg_desc_length.sql  get_content_hash.sql  get_job_total.sql  get_longest_desc_data.sql  get_shortest_desc_data.sql  ins_del_low_quality_jobs.sql  ins_new_job.sql  upd_existing_job.sql  upd_filter_job_quality.sql
week_1/src/: __init__.py  ingestor.py  loader.py  processor.py  profiler.py
week_2/: .env.example  .gitignore  README.md  find_skill_gaps.py  prompt_model.py  pyproject.toml  tag_data.py
week_2/sql/: get_jobs.sql  get_tech_stack.sql  upd_tech_stack.sql
week_3/: .env.example  .gitignore  README.md  docker-compose.yml
week_3/backend/: .dockerignore  Dockerfile  pyproject.toml
week_3/backend/src/: app.py
week_3/backend/src/week_2/: .gitignore  find_skill_gaps.py  prompt_model.py  pyproject.toml
week_3/backend/src/week_2/data/: jobs.db
week_3/frontend/: .dockerignore  Dockerfile  pyproject.toml
week_3/frontend/src/: app.py
week_3/frontend/src/assets/: chat_page.js  styles.css
week_3/frontend/src/templates/: chat_page.html
