[project]
name = "week-2"
version = "0.1.0"
description = "week2 Project module"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.3.1",
    "google>=3.0.0",
    "google-api-core>=2.31.0",
    "google-genai>=2.8.0",
    "ollama>=0.6.2",
    "requests>=2.34.2",
    "ruff>=0.15.14",
]
