[project]
name = "backend"
version = "0.1.0"
description = "week_3 backend component"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
	"fastapi>=0.136.3",
	"google-genai>=2.8.0",
	"jinja2>=3.1.6",
	"ollama>=0.6.2",
	"python-dotenv>=1.2.2",
	"requests>=2.34.2",
	"ruff>=0.15.14",
	"uvicorn>=0.47.0",
]
